# jrme

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  bug.txt  build.sh  install.sh  install_plugin.sh  journal_example.txt  jrme_opt.txt  makefile  uninstall.sh  uninstall_plugin.sh
doc/: CHANGE.md  JAttribute.uxf  JournallBook.uxf  README-EN.md  README-ZH.md  TODO.md
editor/: KiloEditor.cpp  KiloEditor.h  cursorUtilities.c  cursorUtilities.h  editorControl.c  editorControl.h  editorUtilities.c  editorUtilities.h  editor_struct.h  kilo.h  makefile  rawMode.c  rawMode.h  rowUtilities.c  save.c  (+4 more)
test/: CMakeLists.txt  makefile  testAll.sh  test_ConfigNode.cpp  test_JAttribute.cpp  test_JournalFilter.cpp  test_JourrnalIOFactory.cpp  test_SfJournalBook.cpp  test_TxtJournalIO.cpp  test_mdJournalIO.cpp  test_timeparser.cpp
test/JournalIOFactory/: Journal.h  JournalBookBase.h  JournalIOFactory.cpp  JournalIOFactory.h  PluginJournalIO.h  TxtJournalIO.cpp  TxtJournalIO.h  Utils.h  debug_print.h  journal_io_api.h  journal_release.c  main.cpp  read1.txt
test/MdJournalIO/: JrmeConfig.cpp  JrmeConfig.h  MdJournalIO.cpp  debug_print.c  journal_release.c  main.cpp  makefile  read1.md  read1Store.txt
test/SfJournalBook/: AutoLock.h  Journal.cpp  JrmeConfig.cpp  JrmeConfig.h  PluginJournalIO.cpp  PluginJournalIO.h  SfJournalBook.cpp  SfJournalBook.h  TxtJournalIO.h  Utils.cpp  date.h  debug_print.h  iniparser.hpp  journal_io_api.h  loop1.txt  main.cpp  makefile
test/TxtJournalIO/: debug_print.c  main.cpp  makefile
test/configNode/: ConfigNodeBase.h  ConfigNodeMaster.cpp  ConfigNodeMaster.h  DateConfigNode.cpp  DateConfigNode.h  LevelConfigNode.h  TagConfigNode.h  ansi_colors.h  config_node_api.h  journal_struct.h  main.cpp  makefile  read1Store.txt  utils.cpp
test/filter/: JournalFilter.cpp  JournalFilter.h  JournalIOBase.h  JrmeConfig.h  PluginJournalIO.cpp  TxtJournalIO.cpp  getLevelFormConfig.txt  getTagsFormConfig.txt  levelFilter.txt  main.cpp  stampFilter.txt  stampFilterCmp.txt  tagsCount.txt  tagsFilterCmp.txt
test/plugin/: makefile
test/plugin/timeparser/: makefile  plugin_common.h  timeparseTest.cpp  timeparse_test.cpp  timeparser_plugin.h
test/sfJournalBook/: loop1.txt  loop1Insert.txt  main.cpp
test/testFile/: JournalIOFactory_read.txt  JournalIO_read.txt  SfJournalBook_book.txt  SfJournalBook_insertSort.txt  SfJournalBook_tmp.txt  filter_getLevelFormAttributePart.txt  filter_getLevelFormConfig.txt  filter_getTagsFormAttributePart.txt  filter_getTagsFormConfig.txt  filter_levelFilter.txt  filter_levelFilterCmp.txt  filter_stampFilter.txt  filter_stampFilterCmp.txt  filter_tagsCount.txt  filter_tagsFilter.txt  filter_tagsFilterCmp.txt
test/timeparser/: EnTimeParser.cpp  EnTimeParser.h  TimeParserBase.h  date.cpp  main.cpp  makefile  timeParserType.h
test/txtJournalIO/: journal.txt  main.cpp  makefile  read1.txt  read1Store.txt
(+146 files in other folders)
